--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=letterboxdClash
 
+# Server Port Configuration
+# Railway provides PORT environment variable, fallback to 8080 for local dev
+server.port=${PORT:8080}
+
 # TMDB API Configuration
 # Set TMDB_API_KEY environment variable in Railway
 # For local development, you can add a fallback after the colon
