--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ server.port=${PORT:8080}
 # TMDB API Configuration
 # Set TMDB_API_KEY environment variable in Railway
 # For local development, you can add a fallback after the colon
-tmdb.api.key=${TMDB_API_KEY}
+# Using empty string as fallback so app can start - will log warning if not set
+tmdb.api.key=${TMDB_API_KEY:}
